tests/ui/traits/const-traits/specialization/non-const-default-const-specialized.stderr
error[E0049]: associated function `value` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/non-const-default-const-specialized.rs:9:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Value {
LL |     fn value() -> u32;
   |             - expected 0 const parameters

error[E0049]: associated function `value` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/non-const-default-const-specialized.rs:9:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Value {
LL |     fn value() -> u32;
   |             - expected 0 const parameters
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const fn `<T as Value>::value` in constant functions
  --> $DIR/non-const-default-const-specialized.rs:15:5
   |
LL |     T::value()
   |     ^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0049.
For more information about an error, try `rustc --explain E0015`.
